# graphql-complexity

./: .codacy.yaml  .flake8  .mutmut-cache  .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mypy.ini  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: benchmarks.yml  python-build.yml  python-package.yml  python-publish.yml
dev/bench/: data.js
docs/: conf.py  index.rst  requirements.txt
docs/guides/: changelog.md  contributing.md  custom_estimators.md  estimators.md  installation.md  integrations.md  license.md  quickstart.md
examples/: explain_example.py  playground.py
src/: estimators.py  extensions.py  schema.py  visitor.py
src/graphql_complexity/: __init__.py  config.py  estimators.py  extensions.py  services.py  visitor.py
src/graphql_complexity/estimators/: __init__.py  arguments.py  base.py  directive.py  simple.py
src/graphql_complexity/evaluator/: __init__.py  complexity.py  explain.py  nodes.py  utils.py  visitor.py
src/graphql_complexity/extensions/: strawberry_graphql.py
src/graphql_complexity/extensions/strawberry/: __init__.py  demo.py  extension.py
src/graphql_complexity/libraries/strawberry/: demo.py  directive.py  extension.py
tests/: benchmark_strawberry_extension.py  test_arguments_estimator.py  test_complexity_visitor.py  test_directives_estimator.py  test_examples.py  test_explain.py  test_lists.py  test_simple_estimator.py  test_strawberry_extension.py  test_tree.py  ut_utils.py
