[tool.poetry]
name = "graphql-complexity"
version = "0.1.0"
description = "A python library that provides complexity calculation helpers for GraphQL"
authors = ["Checho3388 <ezequiel.grondona@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
graphql-core = "^3.2.3"
strawberry-graphql = { version = "^0.219.2", optional = true }

[tool.poetry.extras]
strawberry-graphql = ["strawberry-graphql"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
mypy = "^1.8.0"
black = "^24.2.0"
pytest-cov = "^4.1.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
